# auv

./: README.md
firmware/flight_controller/: README.md  fetch_open_source_fc.sh
firmware/flight_controller/params/: ardusub_example.params
ground_station/: README.md  gcs_cli.py
ros2_ws/src/auv_bringup/: package.xml  setup.py
ros2_ws/src/auv_bringup/auv_bringup/: api_bridge.py  mission_manager.py
ros2_ws/src/auv_bringup/config/: auv_system.params.yaml
ros2_ws/src/auv_bringup/launch/: auv_system.launch.py
ros2_ws/src/auv_control/: package.xml  setup.py
ros2_ws/src/auv_control/auv_control/: depth_hold_controller.py  telemetry_bridge.py
ros2_ws/src/auv_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/auv_interfaces/msg/: Telemetry.msg
scripts/: dev_run.sh
