<?xml version="1.0"?>
<package format="3">
  <name>auv_bringup</name>
  <version>0.1.0</version>
  <description>AUV bringup and mission manager.</description>
  <maintainer email="dev@example.com">auv-dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
