<?xml version="1.0"?>
<package format="3">
  <name>auv_interfaces</name>
  <version>0.1.0</version>
  <description>Message definitions for AUV system.</description>
  <maintainer email="dev@example.com">auv-dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>builtin_interfaces</depend>
</package>
